tests/baselines/reference/unknownTypeErrors.errors.txt
==== tests/cases/compiler/unknownTypeErrors.ts (1 errors) ====
    var foo: Unknown = 0;
             ~~~~~~~
!!! unknownTypeErrors.ts(1,10): error TS2095: Could not find symbol 'Unknown'.